ADD_EXECUTABLE(Home.wt Home.C TreeListExample.C ../treelist/TreeNode.C ../treelist/IconPair.C)
TARGET_LINK_LIBRARIES(Home.wt ${EXAMPLES_CONNECTOR})

INCLUDE_DIRECTORIES(
  ${WT_SOURCE_DIR}/src
  ${WT_SOURCE_DIR}/examples/treelist
)

#
# Create a deploy script
#
SET(APPNAME wt-homepage)
SET(APPBIN Home.wt)
SET(APPRESOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/icons ${CMAKE_CURRENT_SOURCE_DIR}/images ${CMAKE_CURRENT_SOURCE_DIR}/*.xml ${CMAKE_CURRENT_SOURCE_DIR}/*.css")
SET(APPRESOURCES
    "${APPRESOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/*.C ${CMAKE_CURRENT_SOURCE_DIR}/*.h")
SET(APPRESOURCES
    "${APPRESOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/../simplechat/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../simplechat/*.C ${CMAKE_CURRENT_SOURCE_DIR}/../simplechat/*.css ${CMAKE_CURRENT_SOURCE_DIR}/../simplechat/*.xml")
SET(APPRESOURCES
    "${APPRESOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/../treelist/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../treelist/*.C")
SET(APPRESOURCES
    "${APPRESOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/../form/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../form/*.C ${CMAKE_CURRENT_SOURCE_DIR}/../form/*.xml")
SET(APPRESOURCES
    "${APPRESOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/../hello/*.C")
SET(APPRESOURCES
    "${APPRESOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/../hangman/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../hangman/*.C")
SET(APPRESOURCES
    "${APPRESOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/../composer/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../composer/*.C ${CMAKE_CURRENT_SOURCE_DIR}/../composer/*.xml ${CMAKE_CURRENT_SOURCE_DIR}/../composer/*.css")
SET(APPRESOURCES
    "${APPRESOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/../dragdrop/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../dragdrop/*.C ${CMAKE_CURRENT_SOURCE_DIR}/../dragdrop/*.css")
SET(APPRESOURCES
    "${APPRESOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/../filetreetable/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../filetreetable/*.C ${CMAKE_CURRENT_SOURCE_DIR}/../filetreetable/*.css")
SET(APPRESOURCES
    "${APPRESOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/../charts/*.h ${CMAKE_CURRENT_SOURCE_DIR}/../charts/*.C ${CMAKE_CURRENT_SOURCE_DIR}/../charts/*.xml ${CMAKE_CURRENT_SOURCE_DIR}/../charts/*.css")

CONFIGURE_FILE(
  ${WT_SOURCE_DIR}/deploy.sh
  ${CMAKE_CURRENT_BINARY_DIR}/deploy.sh
)

ADD_DEPENDENCIES(Home.wt wt ${EXAMPLES_CONNECTOR})

